@@ -29,6 +29,7 @@
     - list_remote controller items return now array instead of dict
     - on_set lm rule (status changed to 1)
     - new LM API and macro functions: clear (set lvar value to 0), toggle (toggles lvar value between 0 and 1)
+    - cmd macro function now accepts full controller ids (uc/controller_id) as well as short
 
 3.0.1
     Minor release with some urgent features
